Prevent unnecessary shift of content
To reproduce the bug before this change:

* focus the textarea
* click a different window outside the browser
* notice the toolbar shifted 1px
* focus the textarea again
* notice the toolbar shifted 1px back

--- a/packages/components/src/FormField/FormField.module.css
+++ b/packages/components/src/FormField/FormField.module.css
@@ -74,6 +74,13 @@
   position: relative;
   z-index: var(--field--base-elevation);
   box-shadow: var(--shadow-focus);
+
+  &.textarea {
+    /* This avoids a shift of content when the textarea is blurred due to the relative positioning
+    added above. We should look into whether that's necessary at all, but it requires testing many
+    instances of FormField. */
+    position: initial;
+  }
 }
 
 .horizontalWrapper {
@@ -411,7 +418,7 @@
 
 .textarea.hasToolbar[data-toolbar-visible="true"] {
   .toolbar {
-    bottom: 0;
+    bottom: 1px;
   }
 
   .input {
